[gd_scene load_steps=24 format=3 uid="uid://wkhin7j71kba"]

[ext_resource type="Script" path="res://scenes/gameplay/characters/enemy/bone_ghost.gd" id="1_hc7k1"]
[ext_resource type="PackedScene" uid="uid://dn6dkghyx5fp" path="res://scenes/gameplay/effects/smoke_generator.tscn" id="4_1ea75"]
[ext_resource type="Shader" path="res://scenes/gameplay/characters/enemy/ghost_hit.gdshader" id="5_w7y0t"]
[ext_resource type="Texture2D" uid="uid://xpr4u0w271wg" path="res://assets/sprites/Tribesman-Sheet-Sheet.png" id="6_0mqh3"]
[ext_resource type="AudioStream" uid="uid://do2x6kfn0louc" path="res://assets/sounds/Hit_Hurt35.wav" id="7_8k1he"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_72b7n"]
resource_local_to_scene = true
shader = ExtResource("5_w7y0t")
shader_parameter/active = false

[sub_resource type="AtlasTexture" id="AtlasTexture_x1x8l"]
atlas = ExtResource("6_0mqh3")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m0sch"]
atlas = ExtResource("6_0mqh3")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yhtuw"]
atlas = ExtResource("6_0mqh3")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s6ujv"]
atlas = ExtResource("6_0mqh3")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v4mok"]
atlas = ExtResource("6_0mqh3")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yo4qe"]
atlas = ExtResource("6_0mqh3")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3prjk"]
atlas = ExtResource("6_0mqh3")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vht1e"]
atlas = ExtResource("6_0mqh3")
region = Rect2(224, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_8r3jv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x1x8l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m0sch")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yhtuw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s6ujv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v4mok")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yo4qe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3prjk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vht1e")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uemew"]
size = Vector2(14, 12)

[sub_resource type="CircleShape2D" id="CircleShape2D_irilg"]
radius = 394.011

[sub_resource type="CircleShape2D" id="CircleShape2D_xmlg3"]
radius = 204.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_chry7"]
size = Vector2(12, 10)

[sub_resource type="Animation" id="Animation_thyiw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_vef8k"]
resource_name = "hit"
length = 0.12
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-0.261799, 0.0]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [true],
"method": &"setShader"
}, {
"args": [false],
"method": &"setShader"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3ujr7"]
_data = {
"RESET": SubResource("Animation_thyiw"),
"hit": SubResource("Animation_vef8k")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_7jbvl"]
radius = 96.0469

[node name="BoneGhost" type="CharacterBody2D"]
process_mode = 1
collision_layer = 4
collision_mask = 5
script = ExtResource("1_hc7k1")

[node name="SmokeGenerator" parent="." instance=ExtResource("4_1ea75")]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_72b7n")
sprite_frames = SubResource("SpriteFrames_8r3jv")
autoplay = "default"
frame_progress = 0.796975

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 3)
shape = SubResource("RectangleShape2D_uemew")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_irilg")

[node name="Area2D2" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
shape = SubResource("CircleShape2D_xmlg3")

[node name="SoundHit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_8k1he")
volume_db = -4.0

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(0, 3)
shape = SubResource("RectangleShape2D_chry7")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_3ujr7")
}

[node name="Area2D3" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D3"]
shape = SubResource("CircleShape2D_7jbvl")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_area_2d_2_body_entered"]
[connection signal="body_exited" from="Area2D2" to="." method="_on_area_2d_2_body_exited"]
[connection signal="body_entered" from="HurtBox" to="." method="_on_hurt_box_body_entered"]
[connection signal="body_exited" from="HurtBox" to="." method="_on_hurt_box_body_exited"]
[connection signal="body_entered" from="Area2D3" to="." method="_on_area_2d_3_body_entered"]
[connection signal="body_exited" from="Area2D3" to="." method="_on_area_2d_3_body_exited"]
